# minions

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _cron-shared.yml  agent_memory_demote.yml  assign_backlog_tasks.yml  branch_sweep.yml  capacity_review.yml  ci.yml  crew_heartbeat.yml  daily.yml  discovery.yml  execute_approved.yml  execute_expedited.yml  friday.yml  maintainer_bot.yml  monthly.yml  post_deploy_verify.yml  pr_followup.yml  pr_owner_sweep.yml  pr_review_loop.yml  project_scan.yml  refine_approved.yml  release.yml  scrum.yml  site_health.yml  site_sentry.yml  tenant_bootstrap.yml  tenant_execute_approved.yml  weekly.yml  welcome.yml
.streamlit/: config.toml
config/: agent_names.yaml  portfolio.yaml
docs/: AGENTS.md  LAUNCH_CHECKLIST.md  SETUP.md
docs/demo/: medium-draft.md  walkthrough-script.md
infra/aws/: README.md  minions-secrets-policy.json
infra/fly/webhook/: .dockerignore  Dockerfile  README.md  fly.toml
projects/: demo.yaml  demo_five.yaml  demo_four.yaml  demo_three.yaml  demo_two.yaml
scripts/: seed_sentry_demo.py
scripts/sync_public/: INVENTORY.md  scrub_rules.yaml  sync_to_public.py
src/minions/: __init__.py  __main__.py  activity.py  anthropic_check.py  budget.py  cost.py  llm.py  observability.py  secrets.py  sync.py  working_tree.py
src/minions/agent_chat/: __init__.py  chat.py  context.py  store.py  store_factory.py  store_postgres.py
src/minions/agents/: __init__.py  base.py  memory.py  memory_store.py  memory_store_factory.py  memory_store_postgres.py  naming.py  roster.py  safety.py  team.py
src/minions/agile/: __init__.py  pm.py  store.py  store_factory.py  store_postgres.py
src/minions/approval/: __init__.py  graph.py  service.py  store.py  store_factory.py  store_postgres.py  tokens.py
src/minions/audit/: __init__.py  runner.py  store.py  store_factory.py  store_postgres.py
src/minions/config/: __init__.py  portfolio.py  portfolio_per_tenant.py
src/minions/crews/: __init__.py  backlog_proposer.py  code_auditor.py  devils_advocate.py  discoverer.py  engineer.py  engineer_runs_store.py  engineer_runs_store_factory.py  engineer_runs_store_postgres.py  factory.py  flow_control.py  planning.py  portfolio_review.py  pr_reviewer.py  qa.py  refinement.py  security.py
src/minions/dashboard/: __init__.py  app.py  data.py  schedule.py  styles.py
src/minions/db/: __init__.py  connection.py  migrate.py
src/minions/deployments/: __init__.py  revert.py  store.py  store_factory.py  store_postgres.py  vercel.py  verifier.py
src/minions/dossiers/: __init__.py  backlog.py  dedupe.py  digest.py  exec_events.py  freshness.py  refresh.py  store.py  store_factory.py  store_postgres.py  sync.py
src/minions/github/: __init__.py  app_auth.py  auth.py  client.py  models.py
src/minions/learning/: __init__.py  capture.py  store.py  store_factory.py  store_postgres.py
src/minions/models/: __init__.py  agent_chat.py  agent_memory.py  agile.py  audit.py  backlog.py  capacity.py  decision.py  deployment.py  dossier.py  interview.py  learning.py  manifest.py  question.py  roles.py  sprint_plan.py  task.py  transcript.py
src/minions/notify/: __init__.py  base.py  clerk_users.py  console.py  gmail.py
src/minions/onboarding/: __init__.py  profile.py
src/minions/preflight/: __init__.py  autodetect.py  models.py  runner.py
src/minions/questions/: __init__.py  service.py  store.py  store_factory.py  store_postgres.py
src/minions/scheduled/: __init__.py  agent_memory_demote.py  assign_backlog_tasks.py  branch_sweep.py  capacity_review.py  crew_heartbeat.py  daily_monitor.py  discovery.py  execute_approved.py  friday_digest.py  maintainer.py  monthly_portfolio_review.py  post_deploy_verify.py  pr_followup.py  pr_owner_sweep.py  pr_review_loop.py  refine_approved.py  scrum.py  site_sentry.py  weekly_planning.py
src/minions/sentry/: __init__.py  site_health_store.py  site_health_store_factory.py  site_health_store_postgres.py
src/minions/spokesperson/: __init__.py  code_scan.py  evidence.py  interview_relay.py  redaction.py  routing.py  service.py  store.py  store_factory.py  store_postgres.py
src/minions/sprints/: store.py  store_factory.py  store_postgres.py
src/minions/tasks/: __init__.py  store.py  (+3 more)
tests/: conftest.py  test_activity.py  test_agent.py  test_agent_chat_context.py  test_agent_chat_response.py  test_agent_chat_store.py  test_agent_learning_store.py  test_agent_memory.py  test_anthropic_check.py  test_approval_graph.py  test_approval_service.py  test_assign_backlog_tasks.py  test_audit_store.py  test_branch_sweep.py  test_budget.py  test_capacity_review.py  test_cli_decisions.py  test_code_auditor.py  test_cost.py  test_dashboard_data.py  test_db_factory.py  test_decision_priority.py  test_decision_store.py  test_devils_advocate_hook.py  test_discoverer.py  test_discovery_sweep.py  test_dossier_backlog.py  test_dossier_digest.py  test_dossier_exec_events.py  test_dossier_execute_hook.py  test_dossier_freshness.py  test_dossier_refresh.py  test_dossier_store.py  test_dossier_store_isolation.py  test_dossier_sync.py  test_engineer_crew.py  test_engineer_preflight_gate.py  test_engineer_retry_prompt.py  test_engineer_runs_store.py  test_execute_approved.py  (+50 more)
web/: .env.example  README.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: AgentLabel.tsx  AmbientParticles.tsx  Avatar.tsx  HeartbeatDot.tsx
web/lib/: actions-dispatch.ts  activity-renderer.ts  cron-schedule.ts  db.ts  github-app-config.ts  github-app.ts  github-installations.ts  mutations.ts  onboarding.ts  project-color.ts  queries-asof.ts  queries.ts  recency.ts  roles.ts  roster.ts  schemas.ts  spokesperson.ts  stage-grouping.ts  stage-sentences.ts  tenant-projects.ts  tenant.ts
web/scripts/: check-tenant-scoping.mjs
(+127 files in other folders)
