[project]
name = "minions"
version = "0.0.1"
description = "Autonomous AI engineering organization for managing a portfolio of software projects."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Siddharth Shankar", email = "operator@example.com" }]

dependencies = [
    "anthropic>=0.40.0",
    "crewai>=0.86.0",
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "langfuse>=4.5.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "boto3>=1.35.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "types-PyYAML>=6.0.12.20260518",
]

[project.scripts]
minions = "minions.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minions"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "C4", "T10", "T20", "PT", "RET", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests carry a lot of fixture/assertion idioms ruff flags as style; none
# are bugs and rewriting them is busywork. Real bugs (F821/F841/etc.) still
# fire — only stylistic noise is suppressed.
"tests/*" = [
  "S101",   # asserts are the whole point of tests
  "E501",   # long signatures + fixture parametrize tuples
  "PT006",  # parametrize names tuple vs comma-string — both fine
  "PT011",  # pytest.raises(Exception) is allowed in negative-path tests
  "PT017",  # asserting on exception inside `except` is allowed
  "PT018",  # composite-assert (assert a and b) is allowed for readability
  "PT019",  # fixture-param-without-value is fine
  "B007",   # unused loop var sometimes intentional in test scaffolding
  "B017",   # pytest.raises(Exception) — see PT011
  "C408",   # dict(...) calls — explicit reads fine in tests
  "N802",   # function-name casing for HTTP-verb mocks
  "N806",   # variable casing in fixtures
  "N818",   # exception-name suffix — internal test exceptions
  "RET504", # explicit assign-then-return reads clearer in tests
  "SIM105", # contextlib.suppress vs try/except pass — both fine
  "SIM108", # ternary vs if/else — clarity over conciseness in tests
  "SIM117", # nested `with` blocks — readable in tests
]
"src/*" = [
  "E501",   # long lines on prompts + JSON examples; not worth churning
  "SIM105", # contextlib.suppress vs try/except pass — fine in sweep loops
  "SIM117", # nested `with` blocks readable in github client + sweeps
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["crewai.*", "langgraph.*", "langchain_anthropic.*", "yaml.*", "pandas.*", "streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]
